--- a/vscode-theme/package.json
+++ b/vscode-theme/package.json
@@ -13,11 +13,11 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/AWBuchanan7/copland98-vscode-theme"
+        "url": "https://github.com/AWBuchanan7/copland98/tree/development/vscode-theme"
     },
-    "homepage": "https://github.com/AWBuchanan7/copland98-vscode-theme/blob/main/README.md",
+    "homepage": "https://github.com/AWBuchanan7/copland98/tree/development/vscode-theme",
     "bugs": {
-        "url": "https://github.com/AWBuchanan7/copland98-vscode-theme/issues"
+        "url": "https://github.com/AWBuchanan7/copland98/tree/development/vscode-theme"
     },
     "engines": {
         "vscode": "^1.57.0"
